--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.application.name=health-gen
+
 # Puerto
 server.port=8080
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/health_system?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/health_system?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=jezatama
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -15,7 +18,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # Manejo de zona horaria JDBC
 spring.datasource.hikari.connectionInitSql=SET time_zone = '+00:00';
 
-# Springdoc (Swagger) - lo añadiremos en el pom luego
+# Springdoc (Swagger)
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
-
