--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.datasource.hikari.connectionInitSql=SET time_zone = '+00:00';
 # Springdoc (Swagger)
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
+
+# IA (placeholders)
+gemini.api-key=${GEMINI_API_KEY:${GOOGLE_API_KEY:${GOOGLEAI_API_KEY:}}}
+gemini.model=gemini-2.5-flash
+gemini.endpoint=https://generativelanguage.googleapis.com/v1beta/models
+gemini.timeout-ms=15000
